--- a/src/css/11-xs.css
+++ b/src/css/11-xs.css
@@ -27,8 +27,8 @@ screen and (min-width: 20.01em) and (orientation: landscape) {
 
 /*============== Content ==============*/
 	/* 100% - header-height - footer - player */
-	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 3em);}
-	.content {padding: 1.33em 0.67em;}
+	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 48px);}
+	.content {padding: 20px 10px;}
 }
 
 
