--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -48,14 +48,13 @@
 
 	.button-scroll-to-top {
 		bottom: 95px;
-		font-size: 2.75em;
 		right: 20px;
 	}
 
 
 /*============== Menus ==============*/
 	.menu-language-choice > ul, .menu-main > ul {padding-top: 24px;}
-	.menu-music > ul {padding-left: 1em;}
+	.menu-music > ul {padding-left: 16px;}
 
 	.menu li {
 		margin: 0;
@@ -68,7 +67,7 @@
 	}
 
 	.menu-playlist-wrapper {
-		bottom: 3em;
+		bottom: 48px;
 		width: 100%;
 	}
 	.menu-playlist-wrapper .playlist-search input {
@@ -77,14 +76,14 @@
 	}
 	.menu-playlist {
 		height: 70vh;
-		max-height: calc(70vh - 3em - 50px); /* height - footer - search */
+		max-height: calc(70vh - 48px - 50px); /* height - footer - search */
 	}
 	.menu-playlist .playlist-time, .menu-playlist .playlist-info {margin-left: 5px;}
 	.menu-playlist .playlist-info {padding-left: 2px;}
 
 
 /*============== Player ==============*/
-	.player {height: 3em;}
+	.player {height: 48px;}
 	.player .track-progress-bar-container, .player .player-controls .volume {display: none;}
 	.player .player-controls {font-size: 1.7em;}
 	.player .track-title, .player .loading-indicator {margin-right: 5px;}
@@ -93,7 +92,7 @@
 
 
 /*============== Footer ==============*/
-	footer {margin-bottom: 3em;}
+	footer {margin-bottom: 48px;}
 	footer .copyright-first-year, footer .copyright-ds, footer .social-label {display: none;}
 	footer .social-icons a {
 		font-size: 1.8em;
@@ -112,7 +111,7 @@
 	.content-discography .album-contents-wrapper {flex-flow: column;}
 	.content-discography .album-cover {
 		margin-right: 0;
-		min-width: 11em;
+		min-width: 176px;
 		text-align: center;
 		width: auto;
 	}
@@ -138,15 +137,13 @@
  * S size only. Just making use of the wider horizontal space.
  **********************************************************************************/
 @media screen and (min-width: 35.5em) and (max-width: 47.99em) {
-	.menu-mobile {margin-right: 16px;}
-
 	.menu li > .menu-item {
 		margin: 0 24px;
 		padding: 10px 8px;
 	}
 
 	.menu-playlist-wrapper {
-		bottom: 2.5em;
+		bottom: 40px;
 		max-width: 100%;
 		width: 576px;
 	}
@@ -156,7 +153,7 @@
 	}
 	.menu-playlist {
 		height: 80vh;
-		max-height: calc(80vh - 3em - 50px); /* height - footer - search */
+		max-height: calc(80vh - 48px - 50px); /* height - footer - search */
 	}
 	.menu-playlist li > .menu-item {padding: 0 8px;}
 	.menu-playlist .menu-item > span, .menu-playlist .menu-item > a {padding: 10px 0;}
@@ -165,17 +162,16 @@
 
 	.button-scroll-to-top {
 		bottom: 75px;
-		font-size: 2.5em;
 		right: 40px;
 	}
 
 	.ajax-loader-spinning {width: 163px;}
 
 	 /* 100% - header-height - footer - player */
-	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 2.5em);}
-	.content {padding: 1em 1.5em 0.67em;}
+	.content-wrapper {min-height: calc(100vh - 64px - 40px - 40px);}
+	.content {padding: 16px 24px 10px;}
 
-	.player {height: 2.5em;}
+	.player {height: 40px;}
 	.player .playlist, .player .player-controls .player-button {padding: 0 15px;}
 	.player .track-progress-bar {display: none;}
 	.player .track-progress-bar-container {display: inline-flex;}
@@ -184,7 +180,7 @@
 		margin: 5px;
 	}
 
-	footer {margin-bottom: 2.5em;}
+	footer {margin-bottom: 40px;}
 	footer .social-icons a {padding: 0 15px;}
 	footer .copyright {margin-right: 15px;}
 	footer .copyright-first-year, footer .copyright-ds {display: inline;}
@@ -192,7 +188,7 @@
 	.content-tune .tune-title, .content-tune .tune-release-info, .content-tune .tune-links {text-align: unset;}
 
 	.content-discography .album-contents-wrapper {flex-flow: row;}
-	.content-discography .album-cover {margin-right: 1.33em;}
+	.content-discography .album-cover {margin-right: 22px;}
 
 	.content-version .ascii-logo {font-size: 0.4em;}
 	.content-version .version-info {
