--- a/src/css/90-colors-white-stripes.css
+++ b/src/css/90-colors-white-stripes.css
@@ -1,8 +1,7 @@
 :root {
 	--ajax-loader-background-color: black;
 
-	--body-background-color: #ececec;
-	--body-background-blend: rgba(255, 255, 255, 0.5);
+	--body-background-color: #f4f4f4;
 	--body-text-color: #000;
 
 	--link-color: #225682;
@@ -32,10 +31,9 @@
 }
 
 body {
-	background: var(--body-background-color) url(img/fon-ececec.png);
+	background: var(--body-background-color) url(img/fon-f4f4f4.png);
 	color: var(--body-text-color);
 }
-header, .content-wrapper {background-color: var(--body-background-blend);}
 header .logo {background: var(--logo-background-color);}
 hr {border-color: var(--menu-text-color);}
 
@@ -52,7 +50,6 @@ hr {border-color: var(--menu-text-color);}
 	color: var(--menu-text-color);
 }
 
-.content-wrapper {box-shadow: 0 3em 3em var(--body-background-blend);} /* mask the gap when there is no player */
 .content a {color: var(--link-color);}
 .content a:hover {color: var(--link-hovered-color);}
 .content a:visited {color: var(--link-visited-color);}
@@ -64,8 +61,7 @@ hr {border-color: var(--menu-text-color);}
 .content-tune .tune-links a:visited {border-color: var(--link-visited-color);}
 .content-version .version-info {border-color: var(--menu-icon-inactive-color);}
 
-.disabled-body, .disabled-body header, .disabled-body .content-wrapper {background-color: transparent;}
-.disabled-body .content-wrapper {opacity: 0.3}
+.disabled-body .content {opacity: 0.3}
 
 footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-separator-medium);}
 
