--- a/src/css/11-xs.css
+++ b/src/css/11-xs.css
@@ -26,9 +26,11 @@ screen and (min-width: 20.01em) and (orientation: landscape) {
 	}
 
 /*============== Content ==============*/
-	/* 100% - header-height - footer - player */
-	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 48px);}
-	.content {padding: 20px 10px;}
+	.content {
+		/* 100% - header-height - footer - player - self padding */
+		min-height: calc(100vh - 64px - 40px - 48px - 40px);
+		padding: 20px 10px;
+	}
 }
 
 
