--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -128,18 +128,12 @@
 
 
 /*============== Content ==============*/
-	.content-wrapper {
-		display: flex;
-		justify-content: center;
-		min-height: calc(100vh - 160px - 40px - 40px); /* 100% - header-height - footer - player */
-	}
-
 	.content {
+		margin: auto;
+		/* 100% - header-height - footer - player - self padding */
+		min-height: calc(100vh - 160px - 40px - 40px - 20px);
 		padding: 10px 32px;
 		max-width: 1033px;
-		width: 100%;
-	}
-	.content-404 {
 		width: auto;
 	}
 
