.content-wrapper -> #content-container

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -177,7 +177,7 @@
 
 		</header>
 
-		<div class="content-wrapper">
+		<div id="content-container">
 			{% block content_block %}{% endblock %}
 		</div>
 
