--- a/src/css/01-base.css
+++ b/src/css/01-base.css
@@ -31,33 +31,13 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
  * Components
  **********************************************************************************/
 .ajax-loader {
-	align-items: center;
-
 	border: 3px double;
-	border-radius: 24px 0 0 24px;
-	border-right: none;
-
-	display: flex;
-	height: 40px;
 	opacity: 0;
-	padding: 8px 16px;
-	position: fixed;
-	right: 0;
-	width: 0;
 }
-
-.ajax-loader-spinning {
-	opacity: 0.9;
-}
-
+.ajax-loader-spinning {opacity: 0.9;}
 .ajax-loader .spinner {
 	background: center no-repeat url(img/vrtelejka-000.gif);
 	background-size: contain;
-	display: flex;
-	height: 38px;
-	margin-right: 5px;
-	vertical-align: middle;
-	width: 38px;
 }
 
 .menu li, .content-tune .tune-links li, .breadcrumbs li {list-style-type: none;}
@@ -70,25 +50,12 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 
 .header-container .header-button, .menu .menu-item, .player .player-button {
 	border: none;
-	display: inline-block;
-	padding: 0;
-}
-
-.toggle-language-label {
-	display: none;
 }
 
 .button-scroll-to-top {
-	border-radius: 60px;
 	cursor: pointer;
-	font-size: 2.75em;
 	font-weight: bold;
-	height: 60px;
-	position: fixed;
-	text-align: center;
-	width: 60px;
 }
-
 
 /*==============  Breadcrumbs ==============*/
 .breadcrumbs ul {
@@ -386,20 +353,4 @@ footer .copyright-copy, footer .copyright-last-year {
 .version-info .version-info-left {
 	font-weight: bold;
 	padding: 0 8px;
-}
-
-
-
-/**********************************************************************************
- * Hide the player by default. JS will undo this on supported browsers
- **********************************************************************************/
-.no-player .player,
-.no-player .menu-playlist-wrapper,
-.no-player .content-tune .tune-play {
-	display: none;
-}
-
-.no-player footer {
-	margin-bottom: 0;
-	margin-top: 48px;
 }
