--- a/src/css/11-xxs.css
+++ b/src/css/11-xxs.css
@@ -24,7 +24,7 @@ screen and (max-width: 20.1em) and (orientation: landscape) {
 	}
 
 
-/*============== Content ==============*/
+/*============== Pages ==============*/
 	.content {padding: 10px;}
 	.content article {text-align: left;}
 
