--- a/src/css/13-s.css
+++ b/src/css/13-s.css
@@ -10,6 +10,20 @@
 		font-size: 2.5em;
 		right: 40px;
 	}
+
+/*============== Pages ==============*/
+	.content {
+		/* 100% - header-height - footer - player - self padding */
+		min-height: calc(100vh - 64px - 40px - 40px - 26px);
+		padding: 16px 24px 10px;
+	}
+
+/*==============  Breadcrumbs ==============*/
+	.breadcrumbs ul {
+		margin-left: 6px;
+		margin-right: 6px;
+	}
+	.breadcrumbs ul li {display: inline;}
 }
 
 
