--- a/src/css/14-m.css
+++ b/src/css/14-m.css
@@ -116,6 +116,11 @@
 		padding: 10px 32px;
 		width: auto;
 	}
+
+
+/*============== Footer ==============*/
+	footer .social-icons a {font-size: 27px;}
+	footer .copyright {font-size: 0.93em;}
 }
 
 /**********************************************************************************
