--- a/src/css/10-geometry-default.css
+++ b/src/css/10-geometry-default.css
@@ -86,6 +86,30 @@
 .breadcrumbs li {display: inline-block;}
 .breadcrumbs li .fas {padding-right: 4px;}
 
+/*==============  Player ==============*/
+.player {height: 40px;}
+
+/*==============  Footer ==============*/
+footer {
+	align-items: center;
+	height: 40px;
+	margin-bottom: 40px; /* make room for the player */
+}
+
+footer .social {
+	flex: auto;
+}
+footer .social-icons a {
+	font-size: 29px;
+	padding: 0 10px;
+}
+
+footer .copyright {
+	justify-content: flex-end;
+	margin-right: 5px;
+}
+footer .copyright-first-year, footer .copyright-ds, footer .social-label {display: none;}
+footer .copyright-copy, footer .copyright-last-year {margin-right: 3px;}
 
 /**********************************************************************************
  * Hide the player by default. JS will undo this on supported browsers
