--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -153,7 +153,7 @@
 			{% block content_block %}{% endblock %}
 		</div>
 
-		<div class="menu-playlist-wrapper shadow-top menu-closed playlist-unavailable">
+		<div class="menu-playlist-wrapper shadow-top menu-closed no-playlist">
 
 			<div class="playlist-search">
 				<input
@@ -165,7 +165,7 @@
 			</div>
 
 			<div class="menu menu-playlist">
-				<div id="playlist-unavailable-label" class="playlist-unavailable-label">
+				<div id="no-playlist-label" class="no-playlist-label">
 					{% trans 'Playlist unavailable. Refresh the page to try again.' %}
 				</div>
 
