--- a/src/css/14-m.css
+++ b/src/css/14-m.css
@@ -21,7 +21,7 @@
 
 /*============== Header ==============*/
 	header {
-		max-height: 160px;
+		height: 160px;
 		overflow: visible;
 		position: relative;
 	}
@@ -29,6 +29,10 @@
 	.header-container {
 		height: 124px;
 		justify-content: center;
+	}
+
+	.header-super-wrapper {
+		display: flex;
 	}
 
 
@@ -107,6 +111,29 @@
 	}
 	.breadcrumbs ul {margin-top: 0;}
 
+/*============== Menus ==============*/
+	.menu-wrapper {
+		display: flex;
+		flex: 0.5;
+	}
+
+	.menu-main-wrapper {justify-content: flex-end;}
+
+	.menu li {
+		padding: 0 12px 2px 12px;
+	}
+
+	.menu li > .menu-item {
+		font-size: 1.1em;
+	}
+
+
+
+/*============== Menu Playlist ==============*/
+	.menu-playlist li > .menu-item {
+		font-size: 1em;
+	}
+
 /*============== Content ==============*/
 	.content {
 		margin: auto;
@@ -127,7 +154,9 @@
  * M only
  **********************************************************************************/
 @media screen and (min-width: 48em) and (max-width: 63.99em) {
-	.header-button {
-		margin: 0 20px;
+	.header-button {margin: 0 20px;}
+
+	.menu-language-choice, .menu-main {
+		flex: 0.8;
 	}
 }
