--- a/src/css/15-l.css
+++ b/src/css/15-l.css
@@ -2,16 +2,16 @@
  * L sized screen - Small desktop or a laptop
  **********************************************************************************/
 @media screen and (min-width: 64em) {
+
 /*============== Header ==============*/
 	header {
-		max-height: 167px;
+		height: 167px;
 	}
 	.header-container {
 		height: 131px;
 	}
-	.header-super-wrapper {
-		display: flex;
-	}
+
+
 
 /*============== Logo ==============*/
 	.header-container .logo-text {
@@ -24,12 +24,115 @@
 		font-size: 0.5em;
 	}
 
+
+/*============== Menus ==============*/
+	#main-menu-button {
+		display: none; /* No main menu button on large screens */
+	}
+
+	.menu-language-choice, .menu-music {
+		min-width: 300px;
+	}
+
+	header .menu li > .menu-item {
+		font-size: 1em;
+	}
+
+	.header-button .icon, .menu li > .menu-item .icon {
+		margin: 0 4px 0 0;
+	}
+
+
+/*============== Language Menu ==============*/
+	.toggle-language-wrapper {
+		align-items: flex-end;
+	}
+
+	.toggle-language-wrapper > .header-button {
+		border-bottom: 0 none;
+		border-radius: 4px;
+		font-size: 1em;
+		margin: 4px 6px;
+		padding: 6px 8px;
+	}
+
+	.toggle-language-label {
+		display: inline;
+	}
+
+
+/*============== Main Menu ==============*/
+	.menu-main-wrapper > .menu-closed {
+		height: auto;
+		overflow: initial;
+	}
+
+	.menu-main-wrapper {
+		display: flex;
+		position: relative;
+		top: -37px;
+	}
+
+	.menu-main {
+		box-shadow: none;
+		display: block;
+		height: auto;
+		min-width: 380px;
+		overflow: initial; /* otherwise menu-music has no shadow */
+		text-align: right;
+		width: inherit;
+	}
+
+	.menu-main > ul {
+		display: flex;
+		flex-flow: row;
+		height: 36px; /* fix the 1px misalignment of the music menu */
+		justify-content: flex-end;
+		margin: 0 2px 0 0;
+		padding-bottom: 0;
+	}
+
+	.menu-main > ul > li {
+		padding: 0;
+	}
+
+	.menu-main > ul > li > .menu-item {
+		border-bottom: 0 none;
+		border-radius: 4px;
+		padding: 6px 12px 6px 8px;
+	}
+	.menu-main > ul > li:last-child > .menu-item {
+		padding-right: 8px;
+	}
+
+	/* expanded menus button spacing */
+	.menu-main > ul > li > .menu-item .icon, .header-container .toggle-language-wrapper .icon {
+		margin: 0 4px 0 2px;
+	}
+
+/*============== Music Menu ==============*/
+	.menu-music > ul {
+		display: flex;
+		flex-flow: column;
+		padding-left: 0;
+		text-align: initial;
+	}
+	.menu-music li:first-child .menu-item {padding-top: 12px;}
+
+
+/*============== Menu Playlist ==============*/
+	.menu-playlist li > .menu-item {
+		font-size: 0.9em;
+	}
+
+
 /*============== Content ==============*/
 	.content {
 		font-size: 0.95em;
 		/* 100% - header-height - footer - player - self padding */
 		min-height: calc(100vh - 167px - 40px - 40px - 20px);
 	}
+
 
 /*============== Footer ==============*/
 	footer .social-label {
