--- a/src/css/01-base.css
+++ b/src/css/01-base.css
@@ -79,43 +79,13 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 
 
 /*============== Playlist Menu ==============*/
-.menu-playlist-wrapper {position: fixed;}
-
-.menu-playlist-wrapper .playlist-search {display: flex;}
-.menu-playlist-wrapper .playlist-search input {
-	border: none;
-	flex: auto;
-}
+.menu-playlist-wrapper .playlist-search input {border: none;}
 .menu-playlist-wrapper .playlist-search input[disabled] {display: none;}
 
-.menu-playlist {
-	border-radius: 10px;
-	margin: 12px 6px 0 0;
-	max-height: 250px; /* Legacy browsers only. It is overridden with "modern" rules in screen size files. */
-	overflow-y: auto;
-}
-.menu-playlist .no-playlist-label {display: none; margin: 12px;}
-.menu-playlist > ul {padding: 0 5px;}
-.menu-playlist li > .menu-item {
-	cursor: auto;
-	display: flex;
-	padding: 0 8px;
-}
-.menu-playlist .menu-item > span, .menu-playlist .menu-item > a {
-	margin-bottom: auto;
-	margin-top: auto;
-	padding: 12px 0;
-}
-.menu-playlist .playlist-title {
-	cursor: pointer;
-	flex: auto;
-}
-.menu-playlist .playlist-info {
-	font-size: 1.2em;
-}
+.menu-playlist {border-radius: 10px;}
+.menu-playlist li > .menu-item {cursor: auto;}
+.menu-playlist .playlist-title {cursor: pointer;}
 
-.no-playlist .no-playlist-label {display: block;}
-.no-playlist ul {display: none;}
 
 /*==============  Player ==============*/
 .player {
