--- a/src/css/10-menu.css
+++ b/src/css/10-menu.css
@@ -1,23 +1,3 @@
-/*============== Menu Buttons ==============*/
-.toggle-language-wrapper {order: 2;}
-.toggle-main-menu-wrapper {order: 3;}
-
-.header-button {font-size: 2em;}
-
-.header-button, .menu .menu-item, .player .player-button {
-	display: inline-block;
-	padding: 0;
-}
-
-.toggle-language-label {
-	display: none;
-}
-
-header .fa-chevron-down, header .fa-chevron-up {
-	font-size: 0.5em;
-	vertical-align: middle;
-}
-
 /*==============  Menus ==============*/
 .menu > ul {
 	margin: 0;
@@ -29,13 +9,33 @@ header .fa-chevron-down, header .fa-chevron-up {
 	padding: 0;
 }
 .menu li > .menu-item {
+	cursor: pointer;
 	display: block;
 	font-size: 1.15em;
 	padding: 12px 8px;
+	text-align: left;
 }
 .menu li > .menu-item .icon {margin: 0 10px 0 6px;}
 
-/*==============  Menu Music ==============*/
+.menu li, .content-tune .tune-links li, .breadcrumbs li {list-style-type: none;}
+
+
+/*============== Language Menu ==============*/
+.menu-language-choice .flag {
+	background: url(img/znamena.svg) no-repeat;
+	border-radius: 3px;
+	display: inline-block;
+	height: 18px;
+	vertical-align: middle;
+	width: 24px;
+}
+
+.menu-language-choice .flag-bg{background-position:0 0;}
+.menu-language-choice .flag-en{background-position:-48px 0;}
+.menu-language-choice .flag-fr{background-position:-24px 0;}
+
+
+/*==============  Music Menu ==============*/
 .menu-music > ul {padding-left: 16px;}
 .menu-music li:first-child .menu-item {padding-top: 0;}
 
@@ -50,19 +50,23 @@ header .fa-chevron-down, header .fa-chevron-up {
 
 .menu-playlist-wrapper .playlist-search {display: flex;}
 .menu-playlist-wrapper .playlist-search input {
+	border: none;
 	display: flex;
 	flex: auto;
 	margin: 12px 8px 0 8px;
 	padding: 8px 6px;
 }
+.menu-playlist-wrapper .playlist-search input[disabled] {display: none;}
 
 .menu-playlist {
+	border-radius: 10px;
 	margin: 12px 6px 0 0;
 	overflow-y: auto;
 }
 
 .menu-playlist li > .menu-item {
 	align-items: center;
+	cursor: auto;
 	display: flex;
 	font-size: 1em;
 	padding-bottom: 0;
@@ -70,6 +74,7 @@ header .fa-chevron-down, header .fa-chevron-up {
 }
 
 .menu-playlist .playlist-info, .menu-playlist .playlist-title {
+	cursor: pointer;
 	padding: 12px 0;
 }
 .menu-playlist .playlist-title {flex: auto;}
